# yabot

./: .bazelrc  .travis.yml  BUILD.bazel  WORKSPACE  containers.bzl  def.bzl  deps.bzl  go.mod  go.sum  image.bzl
gitee/: BUILD.bazel
gitee/cmd/hook/: BUILD.bazel  main.go  plugins.go
gitee/flagutil/: BUILD.bazel  gitee.go
gitee/gitee/: BUILD.bazel  client.go  interface.go
gitee/hook/: BUILD.bazel  server.go
gitee/plugins/: BUILD.bazel  config.go  dispatcher.go  respond.go  util.go
gitee/plugins/approve/: BUILD.bazel  approve.go  client.go  config.go
gitee/plugins/assign/: BUILD.bazel  assign.go  client.go
gitee/plugins/associate/: BUILD.bazel  associate.go  milestone.go  pr.go
gitee/plugins/cla/: BUILD.bazel  cla.go
gitee/plugins/lgtm/: BUILD.bazel  client.go  config.go  lgtm.go  notification.go  strict_review.go
prow/: BUILD.bazel
prow/client/: BUILD.bazel  api.go  client.go  issue.go  pullrequest.go  repository.go
prow/cmd/hook/: BUILD.bazel  main.go  main_test.go
prow/hook/: BUILD.bazel  events.go  hook_test.go  metrics.go  server.go  server_test.go
prow/hook/plugin-imports/: BUILD.bazel  plugin-imports.go
prow/pluginhelp/externalplugins/: BUILD.bazel  externalplugins.go
prow/pluginhelp/hook/: BUILD.bazel  hook.go  hook_test.go
prow/plugins/: BUILD.bazel  cla-config.go  config.go  config_test.go  export.go  helpers.go  plugins.go  respond.go
prow/plugins/approve/: BUILD.bazel  approve.go  export.go
prow/plugins/assign/: BUILD.bazel  assign.go  export.go
prow/plugins/cla/: BUILD.bazel  cla.go
prow/plugins/lgtm/: BUILD.bazel  lgtm.go  lgtm_test.go
publish/: command_status.sh  gitee_push.sh  prow_push.sh  signle_push.sh  travis_check.sh
