package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//:def.bzl", "prefix", "push_image", "tags", "single_tags")

push_image(
    name = "release-push",
    bundle_name = "release",
    images = tags(
        platform = "gitee",
        cmds = ["hook"],
        targets = {},
    ),
)


