load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gitee.go"],
    importpath = "github.com/opensourceways/yabot/gitee/flagutil",
    visibility = ["//visibility:public"],
    deps = [
        "//gitee/gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
    ],
)
