load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "error.go",
        "github.go",
        "interface.go",
        "webhooks.go",
    ],
    importpath = "github.com/opensourceways/yabot/gitee/gitee",
    visibility = ["//visibility:public"],
    deps = [
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_antihax_optional//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
