load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config-agent.go",
        "dispatcher.go",
        "plugin.go",
        "plugins.go",
        "respond.go",
        "util.go",
    ],
    importpath = "github.com/opensourceways/yabot/gitee/plugins",
    visibility = ["//visibility:public"],
    deps = [
        "//gitee/hook:go_default_library",
        "//prow/plugins:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/labels:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
    ],
)
