load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "client.go",
        "issue.go",
        "pullrequest.go",
        "repository.go",
    ],
    importpath = "github.com/opensourceways/yabot/prow/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v36//github:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)