load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "events.go",
        "metrics.go",
        "server.go",
    ],
    importpath = "github.com/opensourceways/yabot/prow/hook",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/hook/plugin-imports:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hook_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/phony:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)
