load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cla-config.go",
        "config.go",
        "export.go",
        "plugins.go",
        "respond.go",
    ],
    importpath = "github.com/opensourceways/yabot/prow/plugins",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_huaweicloud_golangsdk//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_test_infra//pkg/genyaml:go_default_library",
        "@io_k8s_test_infra//prow/bugzilla:go_default_library",
        "@io_k8s_test_infra//prow/client/clientset/versioned/typed/prowjobs/v1:go_default_library",
        "@io_k8s_test_infra//prow/commentpruner:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/kube:go_default_library",
        "@io_k8s_test_infra//prow/labels:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
        "@io_k8s_test_infra//prow/slack:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "plugins_test.go",
        "respond_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_test_infra//prow/bugzilla:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)
