load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "plugins.go",
    ],
    importpath = "github.com/opensourceways/yabot/gitee/cmd/hook",
    visibility = ["//visibility:private"],
    deps = [
        "//gitee/flagutil:go_default_library",
        "//gitee/gitee:go_default_library",
        "//gitee/hook:go_default_library",
        "//gitee/plugins:go_default_library",
        "//gitee/plugins/associate:go_default_library",
        "//gitee/plugins/cla:go_default_library",
        "//prow/pluginhelp/hook:go_default_library",
        "//prow/plugins:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//pkg/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/client/clientset/versioned/typed/prowjobs/v1:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/hook:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/logrusutil:go_default_library",
        "@io_k8s_test_infra//prow/metrics:go_default_library",
        "@io_k8s_test_infra//prow/pjutil:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)

go_binary(
    name = "hook",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
