load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assign.go",
        "client.go",
    ],
    importpath = "github.com/opensourceways/yabot/gitee/plugins/assign",
    visibility = ["//visibility:public"],
    deps = [
        "//gitee/gitee:go_default_library",
        "//gitee/plugins:go_default_library",
        "//prow/plugins/assign:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
    ],
)
