load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config.go",
        "lgtm.go",
        "notification.go",
        "strict_review.go",
    ],
    importpath = "github.com/opensourceways/yabot/gitee/plugins/lgtm",
    visibility = ["//visibility:public"],
    deps = [
        "//gitee/plugins:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/plugins/lgtm:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_test_infra//prow/commentpruner:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)

