load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/opensourceways/yabot/prow/cmd/hook",
    visibility = ["//visibility:private"],
    deps = [
        "//prow/hook:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//pkg/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/bugzilla:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/logrusutil:go_default_library",
        "@io_k8s_test_infra//prow/metrics:go_default_library",
        "@io_k8s_test_infra//prow/pjutil:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp/hook:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
        "@io_k8s_test_infra//prow/plugins/bugzilla:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
        "@io_k8s_test_infra//prow/slack:go_default_library",
    ],
)

go_binary(
    name = "hook",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
    ],
)
