load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plugin-imports.go"],
    importpath = "github.com/opensourceways/yabot/prow/hook/plugin-imports",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/plugins/cla:go_default_library",
        "//prow/plugins/lgtm:go_default_library",
    ],
)
