load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["externalplugins.go"],
    importpath = "github.com/opensourceways/yabot/prow/pluginhelp/externalplugins",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
    ],
)
