load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "approve.go",
        "export.go",
    ],
    importpath = "github.com/opensourceways/yabot/prow/plugins/approve",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/plugins:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/labels:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/plugins/approve/approvers:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)
