load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "export.go",
        "lgtm.go",
    ],
    importpath = "github.com/opensourceways/yabot/prow/plugins/lgtm",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/labels:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lgtm_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/equality:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/github/fakegithub:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)
